<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DrivingDirections</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_location">My location</string>
    <string name="driving_directions">Driving Directions</string>
    <string name="my_places">My places</string>
    <string name="manage_my_places">Manage my places</string>
    <string name="exit">Exit</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title_activity_driving_directions">DrivingDirectionsActivity</string>
    <string name="title_activity_my_location">MyLocationActivity</string>
    <string name="title_activity_my_places">MyPlacesActivity</string>
    <string name="title_activity_manage_my_places">ManageMyPlacesActivity</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search">Search</string>
    <string name="car">Driving</string>
    <string name="walking">Walking</string>
    <string name="public_transport">Transit</string>
    <string name="my_search_history">My Search History</string>
    <string name="delete">Delete My Search History</string>
    <string name="share_my_location">Share my location</string>
    <string name="add_new_place">Add new place</string>
    <string name="add_new_place_label">Name of new place</string>
    <string name="my_places_label">My Places</string>
    <string name="address">Address</string>
    <string name="del_my_places">Delete my places</string>

</resources>
