<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.drivingdirections.MyPlacesActivity">

    <TextView
        android:id="@+id/from_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/from"
         />

    <EditText
        android:inputType="textNoSuggestions"
        android:id="@+id/from"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_below="@id/from_label"
         />

    <TextView
        android:id="@+id/to_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/to"
        android:layout_below="@id/from"
         />

    <EditText
        android:inputType="textNoSuggestions"
        android:id="@+id/to"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_below="@id/to_label"
         />

    <Button
        android:id="@+id/car"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_toLeftOf="@+id/public_transport"
        android:layout_below="@id/to"
        android:text="@string/car" />
    <Button
        android:id="@+id/public_transport"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="fill_horizontal"
        android:layout_below="@id/to"
        android:text="@string/public_transport" />
    <Button
        android:id="@+id/walking"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/public_transport"
        android:layout_gravity="fill_horizontal"
        android:layout_below="@id/to"
        android:text="@string/walking" />

    <Button
        android:id="@+id/search"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="fill_horizontal"
        android:layout_below="@id/public_transport"
        android:text="@string/search" />
    <TextView
        android:id="@+id/my_search_history_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="21dip"
        android:layout_gravity="fill_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/search"
        android:text="@string/my_search_history" />
    <Button
        android:id="@+id/del_my_search_history"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="fill_horizontal"
        android:layout_below="@id/my_search_history_label"
        android:text="@string/delete" />

    <ListView
        android:id="@+id/my_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/del_my_search_history"
        android:layout_marginTop="20dp" />


</RelativeLayout>