<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.drivingdirections.ManageMyPlacesActivity">


    <TextView
        android:id="@+id/manage_my_places"
        android:text="@string/manage_my_places"
        android:textSize="21dip"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/add_new_place_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/add_new_place_label"
        android:layout_below="@+id/manage_my_places"
        />

    <EditText
        android:id="@+id/new_place"
        android:inputType="textNoSuggestions"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_new_place_label"
        android:layout_gravity="fill_horizontal"
        />

    <Button
        android:id="@+id/add_new_place"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/new_place"
        android:text="@string/add_new_place" />

    <TextView
        android:id="@+id/my_places_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="21dip"
        android:layout_gravity="fill_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/add_new_place"
        android:text="@string/my_places_label" />


    <ListView
        android:id="@+id/my_places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/add_new_place"
        android:layout_marginTop="40dp" />

</RelativeLayout>
